--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://githost.com/camper/repo.git"
+		"url": "https://github.com/olili27/timestamp-microservice-api.git"
 	},
 	"keywords": [
 		"node",
