--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
 	"description": "An FCC Backend Challenge",
 	"main": "index.js",
 	"scripts": {
-		"start": "node ./server/index.js",
-		"dev": "nodemon ./server/index.js"
+		"start": "node erver/index.js",
+		"dev": "nodemon server/index.js"
 	},
 	"dependencies": {
 		"express": "^4.12.4",
